Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53248

Failed to build Android/QNX on Windows

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.7
    • 5.7.0 RC
    • Build System
    • None

      After https://codereview.qt-project.org/154469 , there are build failures like:

      c:/utils/android-ndk-r9c/toolchains/arm-linux-androideabi-4.8/prebuilt/windows/bin/arm-linux-androideabi-gcc -c -Wno-psabi -march=armv7-a -mfloat-abi=softfp -mfpu=vfp -ffunction-sections -funwind-tables -fstack-protector -fno-short-enums -DANDROID -Wa,--noexecstack -fno-builtin-memmove -Os -fomit-frame-pointer -fno-strict-aliasing -finline-limit=64 -mthumb -fPIC -fvisibility=hidden -Wno-psabi -fno-exceptions -DQT_NO_XKBCOMMON -DFT2_BUILD_LIBRARY -DFT_CONFIG_OPTION_USE_PNG -DPNG_ARM_NEON_OPT=0 -DTT_CONFIG_OPTION_SUBPIXEL_HINTING -DQT_NO_EXCEPTIONS -I. -Ic:\utils\openssl-android-master\include -Ibuilds\unix -Iinclude -I..\libpng -I..\zlib -isystem c:\utils\android-ndk-r9c\sources\cxx-stl\gnu-libstdc++\4.8\include -isystem c:\utils\android-ndk-r9c\sources\cxx-stl\gnu-libstdc++\4.8\libs\armeabi-v7a\include -isystem c:\utils\android-ndk-r9c\platforms\android-9\arch-arm\usr\include -I..\..\..\mkspecs\android-g++ -o .obj\png.obj ..\libpng\png.c
       In file included from ..\libpng\pngstruct.h:30:0,
                       from ..\libpng\pngpriv.h:808,
                       from ..\libpng\png.c:14:
       ..\zlib/zlib.h:36:21: fatal error: qglobal.h: No such file or directory
        #include <qglobal.h>
                            ^
       compilation terminated.
       Makefile:827: recipe for target '.obj\png.obj' failed
       Mingw32-make[2]: *** [.obj\png.obj] Error 1
       Mingw32-make[2]: Leaving directory 'c:/Users/qt/work/qt/qtbase/src/3rdparty/freetype'
       Makefile:394: recipe for target 'sub-3rdparty-freetype-make_first' failed
       Mingw32-make[1]: *** [sub-3rdparty-freetype-make_first] Error 2
      

      Hotfix for Android: e6cb3b8c766ea393bb63165e539268986de85687
      Hotfix for QNX: 566ccd3ca82cecae292c63a1868cf7f256967f1b

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes